--- a/puzzle/less/base.less
+++ b/puzzle/less/base.less
@@ -8,11 +8,11 @@
 @prim-5: #C1FA99;
 
 // secondary
-@secon-1: #40DBDB;
-@secon-2: #4DA5A5;
-@secon-3: #169090;
-@secon-4: #6FEDED;
-@secon-5: #91EDED;
+@second-1: #40DBDB;
+@second-2: #4DA5A5;
+@second-3: #169090;
+@second-4: #6FEDED;
+@second-5: #91EDED;
 
 // three
 @three-1: #F5FE4B;
@@ -20,5 +20,22 @@
 @three-3: #A1A819;
 @three-4: #F8FF78;
 @three-5: #FAFF9C;
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
+  border: 0;
+
+  #puzzle {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    text-align: center;
+    background-color: @three-1;
+  }
+}
+
 
 
