--- a/puzzle/less/.less.base.css
+++ b/puzzle/less/.less.base.css
@@ -1,1 +1,17 @@
 /* Colors */
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+html #puzzle,
+body #puzzle {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+  background-color: #f5fe4b;
+}
