--- a/puzzle/assets/less/base.less
+++ b/puzzle/assets/less/base.less
@@ -33,7 +33,7 @@ html, body {
     width: 100%;
     overflow: hidden;
     text-align: center;
-    background-color: @three-1;
+    background: url('../img/bg.png');
   }
 }
 
